# aws-lakehouse-engineering-lab

./: .dockerignore  .env.example  .gitignore  .yamllint  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-airflow.txt  requirements.txt
.github/workflows/: data-quality.yml  run-tests.yml  validate-python.yml  validate-yaml.yml
airflow/: Dockerfile
airflow/dags/: lakehouse_pipeline.py  lakehouse_pipeline_dag.py
compose/: airflow.yml  aistor.yml  query.yml  spark.yml  storage.yml
diagrams/: architecture.md
docs/: architecture.md  data-modeling.md  data-quality.md  finops.md  governance.md  observability.md  spark-optimization.md
docs/adr/: 001-local-first-architecture.md  002-minio-as-s3-simulation.md  003-star-schema-modeling.md  004-airflow-orchestration.md  005-pyspark-for-distributed-processing.md  006-data-quality-strategy.md  007-finops-simulation.md  008-observability-strategy.md  009-github-actions-cicd.md
reports/finops/: README.md
scripts/: __init__.py  build_serving_catalog.py  capture_readme_screenshots.cjs  check_environment.sh  clean_outputs.sh  enable_readme_screenshots.py  generate_final_report.sh  run_pipeline_local.sh  setup_dev_env.sh  verify_readme_screenshots.py
spark/benchmarks/: README.md  spark_optimization_benchmark.py
spark/configs/: spark-defaults.conf
spark/jobs/: README.md  bronze_to_silver.py  raw_to_bronze.py  silver_to_gold.py
sql/analytics/: campaign_performance.sql  events_by_channel.sql  revenue_by_category.sql  revenue_by_month.sql  top_customers.sql
src/: __init__.py
src/finops/: costs.py  (+2 more)
(+35 files in other folders)
