[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-lakehouse-engineering-lab"
version = "0.1.0"
description = "Laboratório local-first para simular uma arquitetura Lakehouse inspirada na AWS usando MinIO, PySpark e Airflow."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Luiz Andre" }
]
dependencies = [
  "boto3>=1.34,<2.0",
  "duckdb>=1.0,<2.0",
  "Faker>=26.0,<37.0",
  "pandas>=2.2,<3.0",
  "pyarrow>=16.0,<19.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "pyspark>=3.5,<4.0",
  "python-dotenv>=1.0,<2.0",
  "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.4,<25.0",
  "pytest>=8.2,<9.0",
  "pytest-cov>=5.0,<6.0",
  "ruff>=0.5,<0.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
